--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,18 @@
 {
-  "imports": {},
+  "imports": {
+    "site/": "./",
+    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.63.17/",
+    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.38.3/",
+    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
+    "preact": "https://esm.sh/preact@10.19.6",
+    "preact/": "https://esm.sh/preact@10.19.6/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.4.0",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "std/": "https://deno.land/std@0.190.0/",
+    "partytown/": "https://denopkg.com/deco-cx/partytown@0.4.8/",
+    "daisyui": "npm:daisyui@4.4.19"
+  },
   "tasks": {
     "start": "deno run -A main.ts"
   },
@@ -16,7 +29,10 @@
   ],
   "lint": {
     "rules": {
-      "tags": ["fresh", "recommended"]
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
     }
   },
   "nodeModulesDir": false,
