--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "imports": {
-    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.53.0/",
+    "site/": "./",
+    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.63.17/",
     "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.38.3/",
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "preact": "https://esm.sh/preact@10.19.6",
@@ -28,12 +29,10 @@
   ],
   "lint": {
     "rules": {
-      "tags": ["fresh", "recommended"]
-    }
-  },
-  "fmt": {
-    "files": {
-      "exclude": ["static/", "README.md"]
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
     }
   },
   "nodeModulesDir": false,
